Support rececipt/record queries with nonce
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>